--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
     "private": true,
     "dependencies": {
         "@githubprimer/octicons-react": "^8.5.0",
+        "connected-react-router": "^6.3.2",
+        "history": "^4.7.2",
         "node-sass": "^4.11.0",
         "prop-types": "^15.7.2",
         "react": "^16.8.4",
         "react-dom": "^16.8.4",
         "react-redux": "^6.0.1",
+        "react-router-dom": "^4.3.1",
         "react-scripts": "2.1.8",
         "redux": "^4.0.1",
         "redux-debounced": "^0.5.0",
