--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
         "@githubprimer/octicons-react": "^8.5.0",
         "connected-react-router": "^6.3.2",
         "history": "^4.7.2",
-        "node-sass": "^4.11.0",
+        "moment": "^2.24.0",
         "prop-types": "^15.7.2",
         "react": "^16.8.4",
         "react-dom": "^16.8.4",
         "react-redux": "^6.0.1",
         "react-router-dom": "^4.3.1",
         "react-scripts": "2.1.8",
+        "recharts": "^1.5.0",
         "redux": "^4.0.1",
         "redux-debounced": "^0.5.0",
         "redux-thunk": "^2.3.0",
-        "reselect": "^4.0.0",
         "superagent": "^4.1.0"
     },
     "scripts": {
@@ -35,6 +35,8 @@
         "not op_mini all"
     ],
     "devDependencies": {
-        "chartify": "^3.1.0"
+        "chai": "^4.2.0",
+        "mocha": "^6.0.2",
+        "sinon": "^7.2.7"
     }
 }
