--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
     "dependencies": {
         "@githubprimer/octicons-react": "^8.5.0",
         "connected-react-router": "^6.3.2",
+        "fetch-mock": "^7.3.1",
         "history": "^4.7.2",
         "moment": "^2.24.0",
         "prop-types": "^15.7.2",
         "react": "^16.8.4",
         "react-dom": "^16.8.4",
+        "react-easy-chart": "^1.0.0",
         "react-redux": "^6.0.1",
         "react-router-dom": "^4.3.1",
         "react-scripts": "2.1.8",
         "recharts": "^1.5.0",
         "redux": "^4.0.1",
         "redux-debounced": "^0.5.0",
+        "redux-mock-store": "^1.5.3",
         "redux-thunk": "^2.3.0",
         "superagent": "^4.1.0"
     },
